inventory/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  replicas: 1
  template:
    metadata:
      name: inventory
      labels:
        app: inventory
    spec:
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: inventory
          image: docker.io/hiondal/inventory:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: inventory
      port: 8080
      targetPort: 18081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: inventory.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 8080
